# dao-copilot

./: .env.example  .env.production.template  .firebaserc  .gitignore  .prettierrc  .taskmasterconfig  .windsurfrules  ACCUMULATIVE_TRANSCRIPTION_FIX_COMPLETE.md  AGENT.md  AUDIO_PROCESSING_FIXES.md  AUDIO_TESTING_GUIDE.md  BACKEND_ARCHITECTURE.md  CLAUDE.md  CRITICAL_PERFORMANCE_FIX.md  DEVELOPMENT_PLAN.md  Dockerfile  ERROR_HANDLING_GUIDE.md  FALLBACK_INTEGRATION_COMPLETE.md  FINAL_TEXT_ACCUMULATION_FIX_COMPLETE.md  GCP_SDK_CHANGELOG.md  GITHUB_PROJECTS_SYNC_README.md  GITHUB_PROJECT_SYNC_SOLUTION.md  GITHUB_SYNC_FIX.md  GITHUB_SYNC_TROUBLESHOOTING.md  GITHUB_TOKEN_SCOPE_FIX.md  GLASS_COMPONENTS_GUIDE.md  IMMEDIATE_PERFORMANCE_PATCH.ts  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_SUMMARY.md  LIQUID_GLASS_INTEGRATION.md  MANUAL_DEBUG_INSTRUCTIONS.js  MCP_DISPLAY_FEATURE.md  METRICS_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_IMPROVEMENTS.md  PERSISTENCE_IMPLEMENTATION_SUMMARY.md  PHASE_COMPLETION_SUMMARY.md  PIPELINE_SETUP_COMPLETE.md  PR_215_FIXES_APPLIED.md  PR_226_COMPREHENSIVE_STATUS.md  PR_226_FINAL_STATUS.md  (+101 more)
.cursor/: mcp.json
.github/: MANUAL_PROJECT_SYNC.md  QUICK_MANUAL_WORKFLOW.md  SYNC_READY_TASKS.md  TASKMASTER_GITHUB_INTEGRATION.md  TASKMASTER_SYNC_QUICK_REFERENCE.md  WEB_INTERFACE_SETUP.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.taskmaster/: config.json  state.json
.trunk/: trunk.yaml
app/: globals.css  layout.tsx  page.tsx
backend/: Dockerfile  init.sql  package-lock.json  package.json  pnpm-lock.yaml
builds/: CROSS_PLATFORM_STRATEGY.md
components/: ai-response.tsx  electron-window-controls.tsx
config/: feature-flags-documentation.md  feature-flags-template.json
docs/: GCP_SDK_QUICK_REFERENCE.md  GCP_SDK_SETUP_GUIDE.md  GITHUB_PROJECTS_IMPLEMENTATION.md  GITHUB_PROJECTS_QUICK_REF.md  GITHUB_PROJECTS_SYNC.md  LIVE_TRANSCRIPTION_CONTINUITY_FIX_COMPLETE.md  PERSISTENT_ANSWER_DISPLAY.md  PUBLISHING_GUIDE.md  (+14 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+1068 files in other folders)
