[package]
name = "dao-copilot"
version = "1.0.0"
description = "A powerful DAO management and governance copilot"
authors = ["wysRocket"]
license = "MIT"
repository = "https://github.com/wysRocket/dao-copilot"
default-run = "dao-copilot"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0", features = [ "api-all", "system-tray", "icon-png"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]